@@ -5,6 +5,7 @@ UTIL:
 * type=stats - improvement for JSON output
 * type=zone | introduce actions=display userid information | 'filter=(userid is.enbaled)'
 * type=zone | introduce actions=userid-enable:{BOOL} - per default {BOOL} is TRUE
+* type=service | introduce actions=timeout-inherit - to disable timeout override and inherit from application
 
 BUGFIX:
 * type=device | bugfix for actions=exportLicenseToExcel:file.html
